Añadido eventos click sobre botones

--- a/www/index.html
+++ b/www/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-        <title>Blank App</title>
-    </head>
-    <body>
-        <script type="text/javascript" src="cordova.js"></script>
-    </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+  <title>Gestures</title>
+
+  <link rel="stylesheet" href="css/index.css">
+</head>
+
+<body>
+  <button type="button" name="button" id="lightBtn">Claro</button>
+  <button type="button" name="button" id="darkBtn">Oscuro</button>
+
+  <script type="text/javascript" src="cordova.js"></script>
+  <script type="text/javascript" src="js/vendrfastclick.js"></script>
+  <script type="text/javascript" src="js/gestures.js"></script>
+</body>
+
 </html>
