Añadida una zona para donde activaran los gestos usando Hammer.js

--- a/www/index.html
+++ b/www/index.html
@@ -13,8 +13,13 @@
   <button type="button" name="button" id="lightBtn">Claro</button>
   <button type="button" name="button" id="darkBtn">Oscuro</button>
 
+  <div id="gestures-zone"></div>
+
+  <div id="info">Gestos!!</div>
+
   <script type="text/javascript" src="cordova.js"></script>
-  <script type="text/javascript" src="js/vendrfastclick.js"></script>
+  <script type="text/javascript" src="js/vendors/fastclick.js"></script>
+  <script type="text/javascript" src="js/vendors/hammer.min.js"></script>
   <script type="text/javascript" src="js/gestures.js"></script>
 </body>
 
