Añadir efectos para los diferentes gestos

--- a/www/index.html
+++ b/www/index.html
@@ -15,7 +15,7 @@
 
   <div id="gestures-zone"></div>
 
-  <div id="info">Gestos!!</div>
+  <!-- <div id="info">Gestos!!</div> -->
 
   <script type="text/javascript" src="cordova.js"></script>
   <script type="text/javascript" src="js/vendors/fastclick.js"></script>
